modifica AR colore riempimento testo

--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -390,7 +390,7 @@ Il seguente grafico illustra le interazioni tra l'utente e il sistema per disegn
 \begin{figure}[!ht]
 \centering
 \vspace{20pt} 
-\includegraphics{UC9Espanso.jpg}
+\includegraphics[width=17cm]{UC9Espanso.png}
 \caption{UC9 Caso d'uso: disegna}
 \label{uc9}
 \end{figure}
@@ -478,7 +478,7 @@ Il sistema permette all'utente di selezionare il colore del bordo della figura d
 \subsubsezione{UC9.7 Caso d'uso: seleziona colore riempimento}
 \paragraph{Attori coinvolti} Utente.
 \paragraph{Scopo e descrizione sintetica} 
-Il sistema permette all'utente di selezionare il colore di riempimento del poligono da disegnare.
+Il sistema permette all'utente di selezionare il colore di riempimento del poligono o dei caratteri della casella di testo da disegnare.
 \paragraph{Flusso di eventi}
 \begin{elenconumerato}[\textbf{}]{\subsubsecindent}
 \item L'utente seleziona il colore di riempimento del poligono dalla paletta.
