--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -140,6 +140,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
+       2.1 & 9$\slash$02$\slash$2009 Aggiunte norme stile di codifica & Dissegna Stefano \\ 
+      \hline
        2.0 & 23$\slash$01$\slash$2009 Verifica finale in preaparazione al rilascio per la RPP & Carollo Mirko        \\ 
       \hline
          1.1 & 21$\slash$01$\slash$2009 Aggiornamento strumenti di sviluppo & Carollo Mirko        \\ 
@@ -233,5 +235,8 @@ L'azienda utilizza il software QUnit. \`E molto stabile e, avendo una completa c
 
 \subsezione{Debug codice tramite browser}
 Si utilizza Firebug, un estensione di Firefox che consente di effettuare il debug di codice HTML e JavaScript direttamente dal browser.
+
+\sezione{Stile del codice}
+Lo stile del codice deve essere conforme alle regole utilizzate da \textit{Mozilla}, reperibili ai seguenti due indirizzi: \href{https://developer.mozilla.org/en/JavaScript_style_guide}{https://developer.mozilla.org/en/JavaScript_style_guide} e \href{http://neil.rashbrook.org/Js.htm}{http://neil.rashbrook.org/Js.htm}.
 \end{document}
  
