DP: espansa bozza

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -126,6 +126,41 @@ Il presente documento descrive in modo dettagliato le classi e i relativi metodi
 
 %qui inizia l'indice, che viene creato automaticamente
 
+\sezione{Introduzione}
 
+\subsezione{Scopo del documento}
+Il documento descrive a livello di dettaglio l'architettura del sistema.
+
+\subsezione{Scopo del prodotto}
+Il software AJAXDRAW \`e proposto per verificare e dimostrare la fattibilit\`a di realizzazione di un'applicazione di disegno grafico, in grado di poter elaborare figure vettoriali primitive e complesse utilizzando le tecnologie web.
+
+\subsezione{Glossario}
+All'interno del documento \textit{Glossario}, sono presentati i termini tecnici utilizzati in tutti i documenti. Il glossario \`e fornito in allegato al presente documento.
+\subsezione{Riferimenti}
+Il presente documento \`e redatto utilizzando le convenzioni inserite nel documento \textit{NormeDiProgetto}, consultabile dal repository pubblico al quale WebShape si appoggia per i suoi progetti.
+\subsubsezione{Normativi}
+\begin{elencopuntato}[\subsubsecindent]
+\item[-] \textit{NormeDiProgetto.pdf}
+\item[-] Raccomandazione SVG: http://www.w3.org/TR/SVG11/
+\item[-] Raccomandazione CSS: http://www.w3.org/TR/CSS21/
+\item[-] Working Draft HTML 5: http://www.w3.org/TR/html5/
+\item[-] Specifiche UML: http://www.omg.org/spec/UML/2.1.2/
+\end{elencopuntato}
+
+\sezione{Standard di progetto}
+\subsezione{Standard di progettazione architetturale}
+La progettazione verr\`a presentata tramite una descrizione testuale delle componenti accompagnata da diagrammi UML.
+\subsezione{Standard di documentazione del codice}
+Si vedano le \textit{NormeDiprogetto}.
+\subsezione{Standard di denominazione di entità e relazioni}
+Si vedano le \textit{NormeDiprogetto}.
+\subsezione{Standard di programmazione}
+Si vedano le \textit{NormeDiprogetto}.
+\subsezione{Strumenti di lavoro}
+Si vedano le \textit{NormeDiprogetto}.
+
+\sezione{Specifica delle componenti}
+
+\sezione{Tracciamento della relazione componenti - requisiti}
 
 \end{document}
