figures.js: drawSelection

--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -226,6 +226,7 @@ Viene aggregata dalla classe \textit{FigureSet}.
 \item[-]  \textit{setSelection(value)} permette di selezionare/deselezionare la figura. Modifica \textit{_selected}.
 \item[-]  \textit{isSelected()} dice se la figura \`e correntemente selezionata. Ritorna \textit{_selected}.
 \item[-]  \textit{eachProperty(fn)} applica la funzione fn ad ogni propriet\`a della figura, ovvero a \textit{_bounds} e \textit{_borderColour}.
+\item[-] \textit{drawSelection(canvas)} disegna dei quadratini intorno ai punti principali della figura, ottenuti tramite \textit{getMainPoints}, se la figura \`e selezionata.
 \end{elencopuntato}
 
 \subsezione{FigureSet}
